argo-cd/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
spec:
  selector:
    app: argocd-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
